kubernetes/kong/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-kong-service
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/v2/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3005
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3005
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3005
