kubernetes/kong/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-kong-service
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/v2/notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3002
      - path: /api/v1/notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3002
      - path: /api/notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3002
